Added possibility to add, remove based on aliases